--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "body-parser": "^1.19.0",
+    "bulma": "^0.8.2",
     "express": "^4.17.1",
     "nodemon": "^2.0.3",
     "react": "^16.13.1",
