--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bulma": "^0.8.2",
     "express": "^4.17.1",
